@@ -1,3 +1,4 @@
+20190804 change: remove the install script.  Use instpackage and instchown.
 20190822 cleanup: remove unused dnsmxip.
 20190822 cleanup: remove unused dnscname.
 20190819 version: notqmail 1.07.
